k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tellulf
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: tellulf-app
          image: ghcr.io/kvasbo/tellulf-v6:main
