k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tellulf-service
spec:
  type: NodePort
  selector:
    app: tellulf
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 61539  # Optional: Specify a port number here
