k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tellulf
spec:
  externaltrafficpolicy: Cluster
  type: ClusterIP
  selector:
    app: tellulf
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
